--- a/MyDailyPal/View/Base.lproj/Main.storyboard
+++ b/MyDailyPal/View/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4WD-Ol-tPe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AXT-cV-4Ah">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -2266,9 +2266,8 @@ tapping PIN.</string>
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMO-r6-ov3">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="YMO-r6-ov3">
                                 <rect key="frame" x="0.0" y="64" width="375" height="555"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="sideEffectCell" id="t89-cN-2hM" customClass="SideEffectsTableViewCell" customModule="MyDailyPal" customModuleProvider="target">
@@ -2278,29 +2277,24 @@ tapping PIN.</string>
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f0j-J1-CAG">
-                                                    <rect key="frame" x="230" y="3" width="39" height="36"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" image="edit_query"/>
-                                                </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5f-Wg-cBy">
-                                                    <rect key="frame" x="78" y="8" width="76" height="20"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I5f-Wg-cBy">
+                                                    <rect key="frame" x="124" y="8" width="243" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="76" id="90a-P8-8tK"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDr-ns-6kU">
-                                                    <rect key="frame" x="10" y="2" width="40" height="40"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SDr-ns-6kU">
+                                                    <rect key="frame" x="31" y="-2" width="40" height="40"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tA6-Yy-3LR">
-                                                    <rect key="frame" x="293" y="3" width="46" height="36"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <state key="normal" image="ic_menu_delete"/>
-                                                </button>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstItem="I5f-Wg-cBy" firstAttribute="top" secondItem="EMr-fO-QJd" secondAttribute="topMargin" id="DDf-rk-Knv"/>
                                                 <constraint firstAttribute="bottom" secondItem="SDr-ns-6kU" secondAttribute="bottom" constant="1.5" id="GiK-le-XI9"/>
                                                 <constraint firstItem="SDr-ns-6kU" firstAttribute="leading" secondItem="EMr-fO-QJd" secondAttribute="leading" constant="10" id="RMk-81-m6K"/>
+                                                <constraint firstItem="I5f-Wg-cBy" firstAttribute="leading" secondItem="EMr-fO-QJd" secondAttribute="leading" constant="78" id="fBP-SR-tJY"/>
                                                 <constraint firstItem="SDr-ns-6kU" firstAttribute="top" secondItem="EMr-fO-QJd" secondAttribute="top" constant="2" id="mqf-7S-kxw"/>
                                                 <constraint firstItem="I5f-Wg-cBy" firstAttribute="leading" secondItem="SDr-ns-6kU" secondAttribute="trailing" constant="28" id="pGp-KK-gMh"/>
                                             </constraints>
@@ -2316,16 +2310,18 @@ tapping PIN.</string>
                                     <outlet property="delegate" destination="lo8-cb-JHf" id="SXz-wI-5vZ"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="To enter a new side effect, visit " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2co-jt-d7d">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="To enter a new side effect, visit " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2co-jt-d7d">
                                 <rect key="frame" x="16" y="627" width="242" height="40"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JcR-nc-bEc">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JcR-nc-bEc">
                                 <rect key="frame" x="258" y="624" width="87" height="46"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="87" id="s4J-7M-xa4"/>
+                                    <constraint firstAttribute="height" constant="46" id="uJm-XM-UPF"/>
+                                </constraints>
                                 <state key="normal" title="My Calendar"/>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vdk-ht-QvU">
@@ -2459,8 +2455,21 @@ tapping PIN.</string>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="YMO-r6-ov3" firstAttribute="trailing" secondItem="sec-Xk-K6c" secondAttribute="trailing" id="4KR-u5-JWY"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="leading" secondItem="AMQ-5b-X6G" secondAttribute="leading" constant="258" id="4i3-eD-WLC"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="top" secondItem="YMO-r6-ov3" secondAttribute="bottom" constant="5" id="4ka-db-zR7"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="centerY" secondItem="2co-jt-d7d" secondAttribute="centerY" id="CCR-hY-1aq"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="top" secondItem="AMQ-5b-X6G" secondAttribute="top" constant="624" id="GCJ-5T-45Q"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="top" secondItem="AMQ-5b-X6G" secondAttribute="top" constant="624" id="PSv-t8-wrH"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="JcR-nc-bEc" secondAttribute="bottom" constant="-3" id="U7g-LW-WEJ"/>
                             <constraint firstItem="vdk-ht-QvU" firstAttribute="trailing" secondItem="sec-Xk-K6c" secondAttribute="trailing" constant="375" id="V7L-GL-RHQ"/>
+                            <constraint firstItem="YMO-r6-ov3" firstAttribute="top" secondItem="sec-Xk-K6c" secondAttribute="top" id="cZv-L8-lGg"/>
+                            <constraint firstItem="YMO-r6-ov3" firstAttribute="leading" secondItem="sec-Xk-K6c" secondAttribute="leading" id="fa0-PD-qdX"/>
                             <constraint firstItem="vdk-ht-QvU" firstAttribute="top" secondItem="AMQ-5b-X6G" secondAttribute="top" constant="21" id="juB-vb-y8n"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="top" secondItem="YMO-r6-ov3" secondAttribute="bottom" constant="5" id="lDQ-ON-pU4"/>
+                            <constraint firstItem="sec-Xk-K6c" firstAttribute="trailing" secondItem="JcR-nc-bEc" secondAttribute="trailing" constant="30" id="mlq-kh-gPK"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="leading" secondItem="AMQ-5b-X6G" secondAttribute="leading" constant="258" id="shd-Vv-7N1"/>
+                            <constraint firstItem="JcR-nc-bEc" firstAttribute="leading" secondItem="2co-jt-d7d" secondAttribute="trailing" id="xqc-aj-QKL"/>
                             <constraint firstItem="vdk-ht-QvU" firstAttribute="bottom" secondItem="sec-Xk-K6c" secondAttribute="bottom" id="yHw-0m-dRN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="sec-Xk-K6c"/>
@@ -3786,10 +3795,10 @@ tapping PIN.</string>
         <segue reference="ZNx-gU-oax"/>
         <segue reference="kyn-aq-311"/>
         <segue reference="azi-0B-B9z"/>
-        <segue reference="d7v-9Z-alJ"/>
-        <segue reference="oU1-p0-Pua"/>
-        <segue reference="j5J-h6-Oai"/>
-        <segue reference="xcx-YQ-xEO"/>
-        <segue reference="89a-Ve-q4l"/>
+        <segue reference="RG1-Dw-oWb"/>
+        <segue reference="RUc-vl-KFL"/>
+        <segue reference="drF-mK-4BT"/>
+        <segue reference="Uw7-eH-aiR"/>
+        <segue reference="c2W-7J-82N"/>
     </inferredMetricsTieBreakers>
 </document>
